# EGB320.github.io

./: EGB320_Tutorial_Planning.txt  Kicker.py  MotorSelection.py  README.md  index.html  vision1.odt
320Website/: GPIOpython.html  GeneralHardwareIntro.html  IntroToVREP.html  SettingUpTheRaspberryPi.html  Vision.html  changelog.html  elements.html  generic.html  index.html  navbar.html
320Website/assets/css/: main.css
VREP_Sim/: EGB320_VREP_LunarSim_Demo.py  EGB320_VREP_Sim_Demo.py  HelperFuncs.py  LunarHelperFuncs.py
VREP_Sim/EGB320_VREP_Files/VREP_PythonCode/: EGB320_CoppeliaSim_Example.py  EGB320_FPV_keyboard_Example.py  EGB320_VREPSim_Example.py  EGB320_VREP_LunarSim_Demo.py  LunarHelperFuncs.py  MIGRATION_SUMMARY.md  SoccerBot_API.py  aux_channel_values.txt  lunarbot_lib.py  object_detector.lua  performance_test.py  (+15 more)
VREP_Sim/remoteApi/: CMakeLists.txt  extApi.c
WebsiteFiles/: GPIOpython.html  GeneralHardwareIntro.html  Hardware1.html  Hardware2.html  ImagingMicroSDCard.html  IntroToVREP.html  MOOCS.html  PiHatLib_Documentation.html  RoverBotLib_Documentation.html  SettingUpTheRaspberryPi.html  SoccerBotLib_Documentation.html  StudentWeeklyGuide.html  StudentWeeklyGuideWrapper.html  Vision.html  changelog.html  generic.html  index.html  navbar.html
WebsiteFiles/StudentWeeklyGuide_files/: filelist.xml  props007.xml  themedata.thmx
WebsiteFiles/archive/: record_example.py  record_on_key_press.py
WebsiteFiles/demo_management/: DemoManagement.html
WebsiteFiles/dlc/: EGB320_Gerber_Job.cam
WebsiteFiles/images/: .~lock.ImageCreation.odp#  ImageCreation.odp
(+38 files in other folders)
